Fix model controller
