# server/endpoint/utils.py
@@ -1,85 +1,30 @@
 from SPARQLWrapper import SPARQLWrapper, JSON
 from rdflib import Graph
-from openapi_server.static import UPDATE_ENDPOINT, DEFAULT_MINT_INSTANCE
+from openapi_server.static import UPDATE_ENDPOINT, DEFAULT_MINT_INSTANCE, QUERY_ENDPOINT
 from openapi_server.static_vars import *
 from flask import json
 import requests
 
 
-def get_all_resource(resource_type):
-    headers = {
-        'Accept': 'application/ld+json',
-    }
-    query_resource = f'  ?s rdf:type {resource_type} .'
-    data = {
-        'query': 'PREFIX xml: <http://www.w3.org/XML/1998/namespace>'
-                 'PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>'
-                 'PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>'
-                 'PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>'
-                 'PREFIX dc: <http://purl.org/dc/terms/>'
-                 'PREFIX mc: <https://w3id.org/mint/modelCatalog#>'
-                 'CONSTRUCT {'
-                 '?s ?o ?p '
-                 '}'
-                 'WHERE {'
-                 f'{query_resource}'
-                 '?s ?o ?p'
-                 '}'
-    }
-
-    return requests.post('http://ontosoft.isi.edu:3030/ds/query', headers=headers, data=data)
+def get_all_resource(resource_type, username=None):
+    headers = {'Accept': 'application/ld+json'}
+    query = query_all_resource(resource_type, username)
+    data = {'query': query}
+    return requests.post(QUERY_ENDPOINT, headers=headers, data=data)
 
 
-def get_resource(resource_id, resource_type):
-    headers = {
-        'Accept': 'application/ld+json',
-    }
-    resource_uri = build_user_resource_uri(resource_id)
-    query_resource = f'<{resource_uri}> ?o ?p .'
-
-    data = {
-        'query': 'PREFIX xml: <http://www.w3.org/XML/1998/namespace>'
-                 'PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>'
-                 'PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>'
-                 'PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>'
-                 'PREFIX dc: <http://purl.org/dc/terms/>'
-                 'PREFIX mc: <https://w3id.org/mint/modelCatalog#>'
-                 'CONSTRUCT {'
-                 f'<{resource_uri}> ?o ?p '
-                 '}'
-                 'WHERE {'
-                 f'{query_resource}'
-                 '}'
-    }
-
-    return requests.post('http://ontosoft.isi.edu:3030/ds/query', headers=headers, data=data)
+def get_resource(resource_id, resource_type, username=None):
+    headers = {'Accept': 'application/ld+json'}
+    query = query_resource(resource_id, username)
+    data = {'query': query}
+    return requests.post(QUERY_ENDPOINT, headers=headers, data=data)
 
 
-def get_all_resources_related(resource_id, relation):
-    headers = {
-        'Accept': 'application/ld+json',
-    }
-    resource_uri = build_user_resource_uri(resource_id)
-
-    construct_clause = f'?s ?o ?p'
-    where_clause = f'<{resource_uri}> {relation} ?s . ?s ?o ?p'
-
-    data = {
-        'query': 'PREFIX xml: <http://www.w3.org/XML/1998/namespace>'
-                 'PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>'
-                 'PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>'
-                 'PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>'
-                 'PREFIX dc: <http://purl.org/dc/terms/>'
-                 'PREFIX mc: <https://w3id.org/mint/modelCatalog#>'
-                 'CONSTRUCT {'
-                 f'{construct_clause}'
-                 '}'
-                 'WHERE {'
-                 f'{where_clause}'
-                 '}'
-    }
-
-    return requests.post('http://ontosoft.isi.edu:3030/ds/query', headers=headers, data=data)
+def get_all_resources_related(resource_id, relation, username=None):
+    headers = {'Accept': 'application/ld+json'}
+    query = query_resource_related(resource_id, relation, username)
+    data = {'query': query}
+    return requests.post(QUERY_ENDPOINT, headers=headers, data=data)
 
 
 def prepare_jsonld(resource, username, default_type):
@@ -178,3 +123,84 @@ def prepare_jsonjd(jsonld):
         prefixes.append(f'PREFIX {n[0]}: <{n[1]}>')
 
     return prefixes, separate_prefixes_triples(s.decode())
+
+
+def query_all_resource(resource_type, username):
+    if username:
+        graph_uri = build_graph_uri(username)
+        query = f'''PREFIX mc: <https://w3id.org/mint/modelCatalog#>
+        CONSTRUCT {{
+        ?s ?o ?p 
+        }}
+        WHERE {{
+            GRAPH <{graph_uri}> {{
+                ?s a {resource_type} .
+                ?s ?o ?p
+            }}
+        }}
+        '''
+    else:
+        query = f'''PREFIX mc: <https://w3id.org/mint/modelCatalog#>
+        CONSTRUCT {{
+        ?s ?o ?p 
+        }}
+        WHERE {{
+            ?s a {resource_type} .
+            ?s ?o ?p
+        }}
+        '''
+    return query
+
+
+def query_resource_related(resource_uri, relation, username):
+    if username:
+        graph_uri = build_graph_uri(username)
+        query = f'''PREFIX mc: <https://w3id.org/mint/modelCatalog#>
+        CONSTRUCT {{
+        ?s ?o ?p 
+        }}
+        WHERE {{
+            GRAPH <{graph_uri}> {{
+                <{resource_uri}> {relation} ?s . 
+                ?s ?o ?p
+            }}
+        }}
+        '''
+    else:
+        query = f'''PREFIX mc: <https://w3id.org/mint/modelCatalog#>
+        CONSTRUCT {{
+        ?s ?o ?p 
+        }}
+        WHERE {{
+            <{resource_uri}> {relation} ?s .
+            ?s ?o ?p
+        }}
+        '''
+    return query
+
+
+def query_resource(resource_id, username):
+    if username:
+        resource_uri = build_user_resource_uri(resource_id)
+        graph_uri = build_graph_uri(username)
+
+        query = f'''PREFIX mc: <https://w3id.org/mint/modelCatalog#>
+        CONSTRUCT {{
+        <{resource_uri}> ?o ?p
+        }}
+        WHERE {{
+            GRAPH <{graph_uri}> {{
+                <{resource_uri}> ?o ?p
+            }}
+        }}
+        '''
+    else:
+        query = f'''PREFIX mc: <https://w3id.org/mint/modelCatalog#>
+        CONSTRUCT {{
+            <{resource_id}> ?o ?p
+        }}
+        WHERE {{
+            <{resource_id}> ?o ?p
+        }}
+        '''
+    return query
