# server/openapi_server/controllers/modelversion_controller.py
@@ -4,7 +4,8 @@ from openapi_server.models.model_version import ModelVersion  # noqa: E501
 from endpoint.utils import insert_query, prepare_jsonld, get_all_resource, get_resource
 from openapi_server.static_vars import *
 
-def create_model_version(user):  # noqa: E501
+
+def create_model_version(model_version, user):  # noqa: E501
     """Create a ModelVersion
 
     Creates a new instance of a &#x60;ModelVersion&#x60;. # noqa: E501
@@ -19,68 +20,65 @@ def create_model_version(user):  # noqa: E501
         model_version_json = prepare_jsonld(connexion.request.get_json(), user, MODELVERSION_TYPE)
         return insert_query(model_version_json, user)
 
-    return "Bad request", 403, {}
+    return "Bad request", 400, {}
 
-def delete_model_version(model_version_id):  # noqa: E501
+#todo: implement
+def delete_model_version(id):  # noqa: E501
     """Delete a ModelVersion
 
     Deletes an existing &#x60;ModelVersion&#x60;. # noqa: E501
 
-    :param model_version_id: A unique identifier for a &#x60;ModelVersion&#x60;.
-    :type model_version_id: str
+    :param id: A unique identifier for a &#x60;ModelVersion&#x60;.
+    :type id: str
 
     :rtype: None
     """
-    return 'do some magic!'
+    "Not Implemented", 501, {}
 
 
-def get_model_version(modelVersionId):  # noqa: E501
+def get_model_version(id, username=None):  # noqa: E501
     """Get a ModelVersion
 
     Gets the details of a single instance of a &#x60;ModelVersion&#x60;. # noqa: E501
 
-    :param model_version_id: A unique identifier for a &#x60;ModelVersion&#x60;.
-    :type model_version_id: str
+    :param id: A unique identifier for a &#x60;ModelVersion&#x60;.
+    :type id: str
+    :param username: To obtain the results maintained by the MINT project, you must not set up the variable. If you want the results of a user, you must set up the variable with the username
+    :type username: str
 
     :rtype: ModelVersion
     """
+    response = get_resource(id, MODELVERSION_TYPE, username)
+    try:
+        return response.json()
+    except:
+        return "Bad request", 400, {}
+
+
+def get_model_versions(username=None):  # noqa: E501
     """List All ModelVersions
 
     Gets a list of all &#x60;ModelVersion&#x60; entities. # noqa: E501
 
+    :param username: To obtain the results maintained by the MINT project, you must not set up the variable. If you want the results of a user, you must set up the variable with the username
+    :type username: str
 
     :rtype: List[ModelVersion]
     """
-
-    response = get_resource(modelVersionId, MODELVERSION_TYPE)
+    response = get_all_resource(MODELVERSION_TYPE, username)
     try:
         return response.json()
     except:
-        return "Bad request", 403, {}
+        return "Bad request", 400, {}
 
 
-def get_model_versions():  # noqa: E501
-    """List All ModelVersions
-
-    Gets a list of all &#x60;ModelVersion&#x60; entities. # noqa: E501
-
-
-    :rtype: List[ModelVersion]
-    """
-
-    response = get_all_resource(MODELVERSION_TYPE)
-    try:
-        return response.json()
-    except:
-        return "Bad request", 403, {}
-
-def update_model_version(model_version_id, model_version):  # noqa: E501
+def update_model_version(id, model_version):  # noqa: E501
     """Update a ModelVersion
 
     Updates an existing &#x60;ModelVersion&#x60;. # noqa: E501
 
-    :param model_version_id: A unique identifier for a &#x60;ModelVersion&#x60;.
-    :type model_version_id: str
+    :param id: A unique identifier for a &#x60;ModelVersion&#x60;.
+    :type id: str
     :param model_version: Updated &#x60;ModelVersion&#x60; information.
     :type model_version: dict | bytes
 
@@ -88,4 +86,4 @@ def update_model_version(model_version_id, model_version):  # noqa: E501
     """
     if connexion.request.is_json:
         model_version = ModelVersion.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+    "Not Implemented", 501, {}
